added google sheet

--- a/nbs/local_news_dataset.ipynb
+++ b/nbs/local_news_dataset.ipynb
@@ -38,7 +38,7 @@
     "\n",
     "<img src='docs/media/fake_news.png' alt='Few have a lot of confidence in information from professional news outlets or friends and family, though majorities show at least some trust in both, but social media garners less trust than either'/> </img>\n",
     "\n",
-    "In 2017 media historian Caroline Jack released a [lexicon](https://datasociety.net/output/lexicon-of-lies/) to define what was formerly referred to as \"fake news,\" with more nuance. Jack calls this umbrella of disceptive content problematic information. In a similar vein First Draft's\n",
+    "In 2017 media historian Caroline Jack released a [lexicon](https://datasociety.net/output/lexicon-of-lies/) to define what was formerly referred to as \"fake news,\" with more nuance. Jack calls this umbrella of disceptive content problematic information.\n",
     "\n",
     "\n",
     "The social media scholar Alice Marwick [builds off this lexicon and observes that](https://www.georgetownlawtechreview.org/why-do-people-share-fake-news-a-sociotechnical-model-of-media-effects/GLTR-07-2018/) problematic information spreads not only through junk news headlines, but also through memes, videos and podcats. What other mediums are we overlooking? As a hint, we can listen to Marwick and other researchers such as ethnographer [Francesca Tripoldi](https://datasociety.net/output/searching-for-alternative-facts/), who observe that problematic information is deeply connected to one's self-presentation and the reinforcement of group identity. So where does local news fit into this equation?\n",
@@ -49,6 +49,10 @@
     "This dataset is a machine-readible directory of state-level newspapers, tv stations and magazines. In addition to basic information such as the name of the outlet and state it is located in, all available information regarding web presence, social media (twitter, youtube, facebook) and their owners is scraped, too.\n",
     "\n",
     "The sources of this dataset are [usnpl.com](www.usnpl.com)-- newspapers and magazines by state, [stationindex.com](www.stationindex.com) -- tv stations by state and by owner, and homepages of the media corporations [Meredith](http://www.meredith.com/local-media/broadcast-and-digital), [Sinclair](http://sbgi.net/tv-channels/), [Nexstar](https://www.nexstar.tv/stations/), [Tribune](http://www.tribunemedia.com/our-brands/) and [Hearst](http://www.hearst.com/broadcasting/our-markets).\n",
+    "\n",
+    "You can browse the dataset on [Google Sheets](https://docs.google.com/spreadsheets/d/1f3PjT2A7-qY0SHcDW30Bc_FXYC_7RxnZfCKyXpoWeuY/edit?usp=sharing)<br>\n",
+    "Or look at the raw dataset on [Github](https://github.com/yinleon/LocalNewsDataset/blob/master/data/local_news_dataset_2018.csv)<br>\n",
+    "Or just scroll down to the [tech specs](#local_news_dataset_2018)!\n",
     "\n",
     "This dataset was inspired by Propublica's [Congress API](https://projects.propublica.org/api-docs/congress-api/). I hope that this dataset will serve a similar purpose as a starting point for research and applications, as well as a bridge between datasets from social media, news articles and online communities.\n",
     "\n",
