--- a/nbs/local_news_dataset.ipynb
+++ b/nbs/local_news_dataset.ipynb
@@ -36,7 +36,7 @@
     "\n",
     "Perhaps the most signifigant finding in this study is that very few have \"a lot\" of trust in information from professional news outlets. Is this because so called \"fake news\"-- blurs the line between reputible and false pieces of information? Political scientist Andy Guess has shown that older (60+ yrs old) citizens are more suspectiple to spread links containing junk news on Facebook. Yet the mistrust economy is more than the [junk news](https://www.buzzfeednews.com/article/craigsilverman/viral-fake-election-news-outperformed-real-news-on-facebook) sites Craig Silverman analyzed when he first coined \"fake news\" in late 2016. \n",
     "\n",
-    "<img src='docs/media/fake_news.png' alt='Few have a lot of confidence in information from professional news outlets or friends and family, though majorities show at least some trust in both, but social media garners less trust than either'/> </img>\n",
+    "<img src='docs/media/fake_news.png' alt='Few have a lot of confidence in information from professional news outlets or friends and family, though majorities show at least some trust in both, but social media garners less trust than either'/>\n",
     "\n",
     "In 2017 media historian Caroline Jack released a [lexicon](https://datasociety.net/output/lexicon-of-lies/) to define what was formerly referred to as \"fake news,\" with more nuance. Jack calls this umbrella of disceptive content problematic information.\n",
     "\n",
@@ -84,7 +84,14 @@
    "metadata": {},
    "source": [
     "# 2.Tech Specs <a name='specs'></a>\n",
-    "The Local News Dataset was created with a Python 3.6.5 codebase and the packages in the [`requirements.txt`](https://github.com/yinleon/LocalNewsDataset/blob/master/requirements.txt).\n",
+    "This section is an in-depth look what we scrape off the web and how these pieces of disparate Internet matter come together to form the [Local News Dataset](#ocal_news_dataset_2018).\n",
+    "\n",
+    "<i.For those who tinker...\n",
+    "The intermediates can be generated and can be updated like this<br>\n",
+    "```python download_data.py```<br>\n",
+    "The output file is created from merging and pre-processing the intermediates using this function<br>\n",
+    "```python merge.py``` \n",
+    "These [two scripts](https://github.com/yinleon/LocalNewsDataset/tree/master/py) -- and this notebook, is written in Python 3.6.5 using open sources packages listed in in [requirements.txt](https://github.com/yinleon/LocalNewsDataset/blob/master/requirements.txt).\n",
     "\n",
     "[Top of Notebook](#top)"
    ]
@@ -98,7 +105,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Updated 2018-08-02 21:48:30.055531\n",
+      "Updated 2018-08-02 22:14:11.945090\n",
       "By Leon\n",
       "Using Python 3.6.5\n",
       "On Linux-3.10.0-514.10.2.el7.x86_64-x86_64-with-centos-7.3.1611-Core\n"
@@ -107,14 +114,7 @@
     {
      "data": {
       "text/markdown": [
-       "## Inventory\n",
-       "These are the files in the `../data/` folder ([repo](https://github.com/yinleon/LocalNewsDataset/tree/master/data)).\n",
-       "\n",
-       "The intermediates are generated (and can be updated) by<br>\n",
-       "```python download_data.py```\n",
-       "\n",
-       "The output file is created from merging and pre-processing the intermediates<br>\n",
-       "```python merge.py``` \n"
+       "## Inventory\n"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
