updated docs more

--- a/nbs/local_news_dataset.ipynb
+++ b/nbs/local_news_dataset.ipynb
@@ -69,12 +69,15 @@
     "If this dataset is helpful to you please cite it as:\n",
     "```\n",
     "@misc{Yin:2018\n",
-    "author = {Leon Yin},\n",
+    "author = {Leon Yin and the SMaPP Lab},\n",
     "title = {Local News Dataset},\n",
     "year = {2018}\n",
     "howpublished= {\\url{https://github.com/yinleon/LocalNewsDataset}} \n",
     "\n",
     "```\n",
+    "\n",
+    "## Liscence\n",
+    "This data is free to use, but please follow the Propublica [Terms](#terms).\n",
     "\n",
     "<hr>"
    ]
@@ -84,13 +87,13 @@
    "metadata": {},
    "source": [
     "# 2.Tech Specs <a name='specs'></a>\n",
-    "This section is an in-depth look what we scrape off the web and how these pieces of disparate Internet matter come together to form the [Local News Dataset](#ocal_news_dataset_2018).\n",
+    "This section is an in-depth look what is scraped from the web and how these pieces of disparate Internet matter come together to form the [Local News Dataset](#ocal_news_dataset_2018).\n",
     "\n",
-    "<i.For those who tinker...\n",
+    "<i>For those who tinker...</i><br>\n",
     "The intermediates can be generated and can be updated like this<br>\n",
-    "```python download_data.py```<br>\n",
+    "```>>> python download_data.py```<br>\n",
     "The output file is created from merging and pre-processing the intermediates using this function<br>\n",
-    "```python merge.py``` \n",
+    "```>>> python merge.py``` <br>\n",
     "These [two scripts](https://github.com/yinleon/LocalNewsDataset/tree/master/py) -- and this notebook, is written in Python 3.6.5 using open sources packages listed in in [requirements.txt](https://github.com/yinleon/LocalNewsDataset/blob/master/requirements.txt).\n",
     "\n",
     "[Top of Notebook](#top)"
@@ -105,7 +108,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Updated 2018-08-02 22:14:11.945090\n",
+      "Updated 2018-08-02 22:19:14.015199\n",
       "By Leon\n",
       "Using Python 3.6.5\n",
       "On Linux-3.10.0-514.10.2.el7.x86_64-x86_64-with-centos-7.3.1611-Core\n"
@@ -348,7 +351,7 @@
        "| <b>geo</b> | The raw geolocation field from the website. We parse this field to get `city` and `state` | 89 |\n",
        "| <b>network</b> | The franchise or brand name that the station belongs to IE Fox | 28 |\n",
        "| <b>state</b> | The two letter state abbreviation of the media outlet. | 35 |\n",
-       "| <b>station</b> | The name of the TV station IE (\"KRIV\"). If anyone knows the origin of this naming convention, I would love to know! | 611 |\n",
+       "| <b>station</b> | The name of the TV station I.E. (\"WGBH\"). | 611 |\n",
        "| <b>website</b> | The website of the media outlet exactly as we found it online. | 152 |\n",
        "| <b>broadcaster</b> | The corporate owner of the station. | 1 |\n",
        "| <b>source</b> | Where was this record scraped from? | 1 |\n",
@@ -607,7 +610,7 @@
        "| <b>google</b> | The URL to the media outlet's Google Plus presence. | 13 |\n",
        "| <b>network</b> | The franchise or brand name that the station belongs to IE Fox | 1 |\n",
        "| <b>state</b> | The two letter state abbreviation of the media outlet. | 11 |\n",
-       "| <b>station</b> | The name of the TV station IE (\"KRIV\"). If anyone knows the origin of this naming convention, I would love to know! | 16 |\n",
+       "| <b>station</b> | The name of the TV station I.E. (\"WGBH\"). | 16 |\n",
        "| <b>twitter</b> | The URL to the Twitter screen name of the news outlet. | 14 |\n",
        "| <b>website</b> | The website of the media outlet exactly as we found it online. | 16 |\n",
        "| <b>broadcaster</b> | The corporate owner of the station. | 1 |\n",
@@ -831,7 +834,7 @@
        "#### What do the columns mean?\n",
        "| Column Name | Description | N Unique Values |\n",
        "| --- | --- | --- |\n",
-       "| <b>station</b> | The name of the TV station IE (\"KRIV\"). If anyone knows the origin of this naming convention, I would love to know! | 177 |\n",
+       "| <b>station</b> | The name of the TV station I.E. (\"WGBH\"). | 177 |\n",
        "| <b>website</b> | The website of the media outlet exactly as we found it online. | 113 |\n",
        "| <b>city</b> | The name of the city that the TV station broadcasts from. | 97 |\n",
        "| <b>state</b> | The two letter state abbreviation of the media outlet. | 39 |\n",
@@ -1077,7 +1080,7 @@
        "| <b>facebook</b> | The URL to the media outlet's Facebook presence. | 33 |\n",
        "| <b>network</b> | The franchise or brand name that the station belongs to IE Fox | 1 |\n",
        "| <b>state</b> | The two letter state abbreviation of the media outlet. | 23 |\n",
-       "| <b>station</b> | The name of the TV station IE (\"KRIV\"). If anyone knows the origin of this naming convention, I would love to know! | 33 |\n",
+       "| <b>station</b> | The name of the TV station I.E. (\"WGBH\"). | 33 |\n",
        "| <b>twitter</b> | The URL to the Twitter screen name of the news outlet. | 30 |\n",
        "| <b>website</b> | The website of the media outlet exactly as we found it online. | 33 |\n",
        "| <b>broadcaster</b> | The corporate owner of the station. | 1 |\n",
@@ -1330,7 +1333,7 @@
        "| <b>city</b> | The name of the city that the TV station broadcasts from. | 36 |\n",
        "| <b>facebook</b> | The URL to the media outlet's Facebook presence. | 46 |\n",
        "| <b>network</b> | The franchise or brand name that the station belongs to IE Fox | 1 |\n",
-       "| <b>station</b> | The name of the TV station IE (\"KRIV\"). If anyone knows the origin of this naming convention, I would love to know! | 46 |\n",
+       "| <b>station</b> | The name of the TV station I.E. (\"WGBH\"). | 46 |\n",
        "| <b>twitter</b> | The URL to the Twitter screen name of the news outlet. | 43 |\n",
        "| <b>website</b> | The website of the media outlet exactly as we found it online. | 47 |\n",
        "| <b>youtube</b> | The URL to the media outlet's YouTube presence. | 30 |\n",
@@ -1588,7 +1591,7 @@
        "| <b>owner</b> | The corporate owner of the station. | 641 |\n",
        "| <b>state</b> | The two letter state abbreviation of the media outlet. | 56 |\n",
        "| <b>station_info</b> | Typically related to the frequency of the transmission | 765 |\n",
-       "| <b>station</b> | The name of the TV station IE (\"KRIV\"). If anyone knows the origin of this naming convention, I would love to know! | 1866 |\n",
+       "| <b>station</b> | The name of the TV station I.E. (\"WGBH\"). | 1866 |\n",
        "| <b>subchannels</b> | Alternative names for the TV station | 626 |\n",
        "| <b>website</b> | The website of the media outlet exactly as we found it online. | 1172 |\n",
        "| <b>source</b> | Where was this record scraped from? | 1 |\n",
@@ -1837,7 +1840,7 @@
        "| <b>Facebook</b> | The URL to the media outlet's Facebook presence. | 5100 |\n",
        "| <b>Geography</b> | The two letter state abbreviation of the media outlet. | 51 |\n",
        "| <b>Medium</b> | Whether the news outlet us a newspaper (includes online), magazine, or college newspaper. | 3 |\n",
-       "| <b>Name</b> | The name of the TV station IE (\"KRIV\"). If anyone knows the origin of this naming convention, I would love to know! | 5765 |\n",
+       "| <b>Name</b> | The name of the TV station I.E. (\"WGBH\"). | 5765 |\n",
        "| <b>Twitter_Name</b> | The Twitter screen name of the news outlet. | 3643 |\n",
        "| <b>Website</b> | The website of the media outlet exactly as we found it online. | 6080 |\n",
        "| <b>Youtube</b> | The URL to the media outlet's YouTube presence. | 2226 |\n",
@@ -1898,7 +1901,7 @@
     {
      "data": {
       "text/markdown": [
-       "The intermediaries are merged (using this script), and preprocessed resulting in this file"
+       "The intermediate files above are preprocessed (renaming columns, removing duplicates) and merged resulting in the Local News Dataset! This is it! We made it!"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -2087,7 +2090,7 @@
        "#### What do the columns mean?\n",
        "| Column Name | Description | N Unique Values |\n",
        "| --- | --- | --- |\n",
-       "| <b>name</b> | The name of the TV station IE (\"KRIV\"). If anyone knows the origin of this naming convention, I would love to know! | 8125 |\n",
+       "| <b>name</b> | The name of the TV station I.E. (\"WGBH\"). | 8125 |\n",
        "| <b>state</b> | The two letter state abbreviation of the media outlet. | 55 |\n",
        "| <b>website</b> | The website of the media outlet exactly as we found it online. | 7390 |\n",
        "| <b>domain</b> | The domain that houses the media outlet. It is standardized (no \"www\" or \"http://\"). Sometimes multiple media outlets direct to the same domain (but seprate sub-domain). | 6494 |\n",
@@ -2632,7 +2635,7 @@
     "\n",
     "*Are there licenses, fees or rights associated with\n",
     "any of the data?*<br>\n",
-    "This dataset is free to use. We're copying terms of use from [Propublica](https://www.propublica.org/datastore/terms):\n",
+    "This dataset is free to use. We're copying terms of use from [Propublica](https://www.propublica.org/datastore/terms)<a name='terms'></a>:\n",
     "```\n",
     "In general, you may use Leon Yin and the SMaPP Lab at NYU's data under the following terms. However, there may be different terms included for some data sets. It is your responsibility to read carefully the specific terms included with the data you download or purchase from our website.\n",
     "\n",
