edited thanks to Kinjal

--- a/nbs/local_news_dataset.ipynb
+++ b/nbs/local_news_dataset.ipynb
@@ -26,31 +26,34 @@
    "metadata": {},
    "source": [
     "# 1. Introduction <a name='intro'></a>\n",
-    "2018 has shown us that any medium with an audience can be a vehicle for political propoganda. We saw local news outlets used as a sounding board to decry mainstream media outlets as \"[fake news](https://www.youtube.com/watch?v=khbihkeOISc)\", we also saw Russian trolls masquarade as local news outlets to [build trust](https://www.npr.org/2018/07/12/628085238/russian-influence-campaign-sought-to-exploit-americans-trust-in-local-news) as sleeper accounts on Twitter. \n",
+    "Though not particularly a noticeable part of the current discussion, 2018 has shown us that understanding \"fake news\" -- and the media (manipulation) ecosystem at large -- has as much to do with your local broadcasting station as it does Alex Jones and CNN.\n",
     "\n",
-    "Understanding \"fake news\" -- and the media (manipulation) ecosystem at large, has as much to do with Alex Jones and CNN, as your local broadcasting station. To help put the pieces of this ecosystem into context, we can refer to a 2016 [Pew Study](http://www.journalism.org/2016/07/07/trust-and-accuracy/) on Trust and Accuracy of the Modern Media Consumer-- 86% of survey respondants had \"a lot\" or \"some\" confidence in local news. This was more than national media outlets, social media, and family and friends. \n",
+    "We saw local news outlets used as a sounding board to decry mainstream media outlets as \"[fake new](https://www.youtube.com/watch?v=khbihkeOISc).\" We also saw Russian trolls masquerade as local news outlets to [build trust](https://www.npr.org/2018/07/12/628085238/russian-influence-campaign-sought-to-exploit-americans-trust-in-local-news) as sleeper accounts on Twitter. \n",
+    "\n",
+    "To help put the pieces of this disinformation ecosystem into context, we can refer to a 2016 [Pew Study](http://www.journalism.org/2016/07/07/trust-and-accuracy/) on Trust and Accuracy of the Modern Media Consumer which showed that 86% of survey respondents had \"a lot\" or \"some\" confidence in local news. This was more than their confidence of national media outlets, social media, and family and friends.\n",
+    "\n",
     "\n",
     "<a href=\"http://www.journalism.org/2016/07/07/the-modern-news-consumer/pj_2016-07-07_modern-news-consumer_2-01/\"><img width=\"420\" height=\"399\" src=\"http://assets.pewresearch.org/wp-content/uploads/sites/13/2016/07/PJ_2016.07.07_Modern-News-Consumer_2-01.png\" class=\"attachment-large size-large\" alt=\"Few have a lot of confidence in information from professional news outlets or friends and family, though majorities show at least some trust in both, but social media garners less trust than either\" /></a>\n",
     "\n",
-    "Social media is the least trustworthy news source according to the 4.6K respondants of the Pew study. Mind you, this study was published before the 2016 US Presidential Election and social media platforms were not under the same scrutiny as they are today. \n",
+    "Social media is the least trustworthy news source according to the 4.6K respondents of the Pew study. It's important to note that this study was published before the 2016 US Presidential Election and social media platforms were not under the same scrutiny as they are today. \n",
     "\n",
-    "Perhaps the most signifigant finding in this study is that very few have \"a lot\" of trust in information from professional news outlets. Is this because so called \"fake news\"-- blurs the line between reputible and false pieces of information? Political scientist Andy Guess has shown that older (60+ yrs old) citizens are more suspectiple to spread links containing junk news on Facebook. Yet the mistrust economy is more than the [junk news](https://www.buzzfeednews.com/article/craigsilverman/viral-fake-election-news-outperformed-real-news-on-facebook) sites Craig Silverman analyzed when he first coined \"fake news\" in late 2016. \n",
+    "Perhaps the most significant finding in this study is that very few have \"a lot\" of trust in information from professional news outlets. Is this because so called \"fake news\"-- blurs the line between reputable and false pieces of information? Political scientist Andy Guess has shown that older (60+ yrs old) citizens are more sussceptitble to spreading links containing junk news on Facebook. Yet the mistrust economy is more than the [junk news](https://www.buzzfeednews.com/article/craigsilverman/viral-fake-election-news-outperformed-real-news-on-facebook) sites Craig Silverman analyzed when he first coined \"fake news\" in late 2016. \n",
     "\n",
     "<img src='docs/media/fake_news.png' alt='Few have a lot of confidence in information from professional news outlets or friends and family, though majorities show at least some trust in both, but social media garners less trust than either'/>\n",
     "\n",
-    "In 2017 media historian Caroline Jack released a [lexicon](https://datasociety.net/output/lexicon-of-lies/) to define what was formerly referred to as \"fake news,\" with more nuance. Jack calls this umbrella of disceptive content problematic information.\n",
+    "In 2017 media historian Caroline Jack released a [lexicon](https://datasociety.net/output/lexicon-of-lies/) in an effort to define what was formerly referred to as \"fake news,\" with more nuance. Jack calls this umbrella of deceptive content problematic information.\n",
     "\n",
     "\n",
-    "The social media scholar Alice Marwick [builds off this lexicon and observes that](https://www.georgetownlawtechreview.org/why-do-people-share-fake-news-a-sociotechnical-model-of-media-effects/GLTR-07-2018/) problematic information spreads not only through junk news headlines, but also through memes, videos and podcats. What other mediums are we overlooking? As a hint, we can listen to Marwick and other researchers such as ethnographer [Francesca Tripoldi](https://datasociety.net/output/searching-for-alternative-facts/), who observe that problematic information is deeply connected to one's self-presentation and the reinforcement of group identity. So where does local news fit into this equation?\n",
+    "The social media scholar Alice Marwick -- who made some of the first breakthroughs in thie field with [Becca Lewis](https://datasociety.net/output/media-manipulation-and-disinfo-online/), [recently reminded us that](https://www.georgetownlawtechreview.org/why-do-people-share-fake-news-a-sociotechnical-model-of-media-effects/GLTR-07-2018/) problematic information spreads not only through junk news headlines, but also through memes, videos and podcasts. What other mediums are we overlooking? As a hint, we can listen to Marwick and other researchers such as ethnographer [Francesca Tripoldi](https://datasociety.net/output/searching-for-alternative-facts/), who observe that problematic information is deeply connected to one's self-presentation and the reinforcement of group identity. So where does local news fit into this equation?\n",
     "\n",
-    "Local news -- viewed as a trustworthy news source, is not well-studied in its role in the current media and information landscape. To better understand that role, I put together the `Local News Dataset` in hopes that it will accelerate research of local news across the web.\n",
+    "Though loca news is widely viewed as a relatively trustworthy news source, its role in the current media and information landscape is not well studied. To better understand that role, I put together the <b>Local News Dataset</b> in the hopes that it will accelerate research of local news across the web.\n",
     "\n",
     "## About the Data Set\n",
-    "This dataset is a machine-readible directory of state-level newspapers, tv stations and magazines. In addition to basic information such as the name of the outlet and state it is located in, all available information regarding web presence, social media (twitter, youtube, facebook) and their owners is scraped, too.\n",
+    "This dataset is a machine-readable directory of state-level newspapers, TV stations and magazines. In addition to basic information such as the name of the outlet and state it is located in, all available information regarding web presence, social media (Twitter, Youtube, Facebook) and their owners is scraped, too.\n",
     "\n",
-    "The sources of this dataset are [usnpl.com](www.usnpl.com)-- newspapers and magazines by state, [stationindex.com](www.stationindex.com) -- tv stations by state and by owner, and homepages of the media corporations [Meredith](http://www.meredith.com/local-media/broadcast-and-digital), [Sinclair](http://sbgi.net/tv-channels/), [Nexstar](https://www.nexstar.tv/stations/), [Tribune](http://www.tribunemedia.com/our-brands/) and [Hearst](http://www.hearst.com/broadcasting/our-markets).\n",
+    "The sources of this dataset are [usnpl.com](www.usnpl.com)-- newspapers and magazines by state, [stationindex.com](www.stationindex.com) -- TV stations by state and by owner, and homepages of the media corporations [Meredith](http://www.meredith.com/local-media/broadcast-and-digital), [Sinclair](http://sbgi.net/tv-channels/), [Nexstar](https://www.nexstar.tv/stations/), [Tribune](http://www.tribunemedia.com/our-brands/) and [Hearst](http://www.hearst.com/broadcasting/our-markets).\n",
     "\n",
-    "This dataset was inspired by Propublica's [Congress API](https://projects.propublica.org/api-docs/congress-api/). I hope that this dataset will serve a similar purpose as a starting point for research and applications, as well as a bridge between datasets from social media, news articles and online communities.\n",
+    "This dataset was inspired by ProPublica's [Congress API](https://projects.propublica.org/api-docs/congress-api/). I hope that this dataset will serve a similar purpose as a starting point for research and applications, as well as a bridge between datasets from social media, news articles and online communities.\n",
     "\n",
     "While you use this dataset, if you see irregularities, questionable entries, or missing outlets please [submit an issue](https://github.com/yinleon/LocalNewsDataset/issues/new) on Github or contact me on [Twitter](https://twitter.com/LeonYin). I'd love to hear how this dataset is put to work \n",
     "\n",
@@ -58,11 +61,11 @@
     "Or look at the raw dataset on [Github](https://github.com/yinleon/LocalNewsDataset/blob/master/data/local_news_dataset_2018.csv)<br>\n",
     "Or just scroll down to the [tech specs](#local_news_dataset_2018)!\n",
     "\n",
-    "Happy hunting xo\n",
+    "Happy hunting!\n",
     "\n",
     "## Acknowledgements\n",
     "I'd like to acknowledge the work of the people behind usnpl.com and stationindex.com for compiling lists of local media outlets.\n",
-    "Andreu Casas and Gregory Eady provided invaluable comments to improve this dataset for public release. I am funded and supported by the SMaPP Lab at NYU, thank you Josh Tucker, Jonathan Nagler, Richard Bonneau and my collegue Nicole Baram.\n",
+    "Andreu Casas and Gregory Eady provided invaluable comments to improve this dataset for public release. Kinjal Dave provided much need proof reading. I am funded and supported by the SMaPP Lab at NYU. Thank you Josh Tucker, Jonathan Nagler, Richard Bonneau and my collegue Nicole Baram.\n",
     "\n",
     "\n",
     "## Citation\n",
@@ -77,7 +80,7 @@
     "```\n",
     "\n",
     "## Liscence\n",
-    "This data is free to use, but please follow the Propublica [Terms](#terms).\n",
+    "This data is free to use, but please follow the ProPublica [Terms](#terms).\n",
     "\n",
     "<hr>"
    ]
@@ -101,14 +104,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Updated 2018-08-02 22:19:14.015199\n",
+      "Updated 2018-08-03 13:50:26.828884\n",
       "By Leon\n",
       "Using Python 3.6.5\n",
       "On Linux-3.10.0-514.10.2.el7.x86_64-x86_64-with-centos-7.3.1611-Core\n"
@@ -1839,7 +1842,7 @@
        "| --- | --- | --- |\n",
        "| <b>Facebook</b> | The URL to the media outlet's Facebook presence. | 5100 |\n",
        "| <b>Geography</b> | The two letter state abbreviation of the media outlet. | 51 |\n",
-       "| <b>Medium</b> | Whether the news outlet us a newspaper (includes online), magazine, or college newspaper. | 3 |\n",
+       "| <b>Medium</b> | Whether the news outlet is a newspaper, magazine or college newspaper. | 3 |\n",
        "| <b>Name</b> | The name of the TV station I.E. (\"WGBH\"). | 5765 |\n",
        "| <b>Twitter_Name</b> | The Twitter screen name of the news outlet. | 3643 |\n",
        "| <b>Website</b> | The website of the media outlet exactly as we found it online. | 6080 |\n",
@@ -2098,7 +2101,7 @@
        "| <b>youtube</b> | The URL to the media outlet's YouTube presence. | 2240 |\n",
        "| <b>facebook</b> | The URL to the media outlet's Facebook presence. | 5136 |\n",
        "| <b>owner</b> | The corporate owner of the station. | 634 |\n",
-       "| <b>medium</b> | Whether the news outlet us a newspaper (includes online), magazine or a TV station | 4 |\n",
+       "| <b>medium</b> | Whether the news outlet is a newspaper, magazine, college newspater or a TV station | 4 |\n",
        "| <b>source</b> | Where was this record scraped from? | 8 |\n",
        "| <b>collection_date</b> | when was this record collected? | 3 |\n"
       ],
