--- a/nbs/local_news_dataset.ipynb
+++ b/nbs/local_news_dataset.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "source": [
     "# 1. Introduction <a name='intro'></a>\n",
-    "Though not particularly a noticeable part of the current discussion, 2018 has shown us that understanding \"fake news\" -- and the media (manipulation) ecosystem at large -- has as much to do with your local broadcasting station as it does Alex Jones and CNN.\n",
+    "Though not particularly a noticeable part of the current discussion, 2018 has shown us that understanding \"fake news\" -- and the media (manipulation) ecosystem at large, has as much to do with your local broadcasting station as it does Alex Jones and CNN.\n",
     "\n",
     "We saw local news outlets used as a sounding board to decry mainstream media outlets as \"[fake new](https://www.youtube.com/watch?v=khbihkeOISc).\" We also saw Russian trolls masquerade as local news outlets to [build trust](https://www.npr.org/2018/07/12/628085238/russian-influence-campaign-sought-to-exploit-americans-trust-in-local-news) as sleeper accounts on Twitter. \n",
     "\n",
@@ -51,7 +51,7 @@
     "## About the Data Set\n",
     "This dataset is a machine-readable directory of state-level newspapers, TV stations and magazines. In addition to basic information such as the name of the outlet and state it is located in, all available information regarding web presence, social media (Twitter, Youtube, Facebook) and their owners is scraped, too.\n",
     "\n",
-    "The sources of this dataset are [usnpl.com](www.usnpl.com)-- newspapers and magazines by state, [stationindex.com](www.stationindex.com) -- TV stations by state and by owner, and homepages of the media corporations [Meredith](http://www.meredith.com/local-media/broadcast-and-digital), [Sinclair](http://sbgi.net/tv-channels/), [Nexstar](https://www.nexstar.tv/stations/), [Tribune](http://www.tribunemedia.com/our-brands/) and [Hearst](http://www.hearst.com/broadcasting/our-markets).\n",
+    "The sources of this dataset are [usnpl.com](www.usnpl.com)-- newspapers and magazines by state, [stationindex.com](www.stationindex.com) -- TV stations by state and by owner, and homepages of the media corporations [Meredith](http://www.meredith.com/local-media/broadcast-and-digital), [Sinclair](http://sbgi.net/tv-channels/), [Nexstar](https://www.nexstar.tv/stations/), [Tribune](http://www.tribunemedia.com/our-brands/) and [Hearst](http://www.hearst.com/broadcasting/our-markets). Boutique \n",
     "\n",
     "This dataset was inspired by ProPublica's [Congress API](https://projects.propublica.org/api-docs/congress-api/). I hope that this dataset will serve a similar purpose as a starting point for research and applications, as well as a bridge between datasets from social media, news articles and online communities.\n",
     "\n",
@@ -79,7 +79,7 @@
     "\n",
     "```\n",
     "\n",
-    "## Liscence\n",
+    "## License\n",
     "This data is free to use, but please follow the ProPublica [Terms](#terms).\n",
     "\n",
     "<hr>"
@@ -90,12 +90,12 @@
    "metadata": {},
    "source": [
     "# 2.Tech Specs <a name='specs'></a>\n",
-    "This section is an in-depth look what is scraped from the web and how these pieces of disparate Internet matter come together to form the [Local News Dataset](#ocal_news_dataset_2018).\n",
+    "This section is an in-depth look at what is scraped from the web and how these pieces of disparate Internet matter come together to form the [Local News Dataset](#local_news_dataset_2018).\n",
     "\n",
     "<i>For those who tinker...</i><br>\n",
-    "The intermediates can be generated and can be updated like this<br>\n",
+    "The intermediates can be generated and updated:<br>\n",
     "```>>> python download_data.py```<br>\n",
-    "The output file is created from merging and pre-processing the intermediates using this function<br>\n",
+    "The output file is created from merging and pre-processing the intermediates:<br>\n",
     "```>>> python merge.py``` <br>\n",
     "These [two scripts](https://github.com/yinleon/LocalNewsDataset/tree/master/py) -- and this notebook, is written in Python 3.6.5 using open sources packages listed in in [requirements.txt](https://github.com/yinleon/LocalNewsDataset/blob/master/requirements.txt).\n",
     "\n",
@@ -2638,7 +2638,7 @@
     "\n",
     "*Are there licenses, fees or rights associated with\n",
     "any of the data?*<br>\n",
-    "This dataset is free to use. We're copying terms of use from [Propublica](https://www.propublica.org/datastore/terms)<a name='terms'></a>:\n",
+    "This dataset is free to use. We're copying terms of use from [ProPublica](https://www.propublica.org/datastore/terms)<a name='terms'></a>:\n",
     "```\n",
     "In general, you may use Leon Yin and the SMaPP Lab at NYU's data under the following terms. However, there may be different terms included for some data sets. It is your responsibility to read carefully the specific terms included with the data you download or purchase from our website.\n",
     "\n",
