--- a/nbs/local_news_dataset.ipynb
+++ b/nbs/local_news_dataset.ipynb
@@ -49,9 +49,9 @@
     "Though loca news is widely viewed as a relatively trustworthy news source, its role in the current media and information landscape is not well studied. To better understand that role, I put together the <b>Local News Dataset</b> in the hopes that it will accelerate research of local news across the web.\n",
     "\n",
     "## About the Data Set\n",
-    "This dataset is a machine-readable directory of state-level newspapers, TV stations and magazines. In addition to basic information such as the name of the outlet and state it is located in, all available information regarding web presence, social media (Twitter, Youtube, Facebook) and their owners is scraped, too.\n",
+    "This dataset is a machine-readable directory of state-level newspapers, TV stations and magazines. In addition to basic information such as the name of the outlet and state it is located in, all available information regarding web presence, social media (Twitter, YouTube, Facebook) and their owners is scraped, too.\n",
     "\n",
-    "The sources of this dataset are [usnpl.com](www.usnpl.com)-- newspapers and magazines by state, [stationindex.com](www.stationindex.com) -- TV stations by state and by owner, and homepages of the media corporations [Meredith](http://www.meredith.com/local-media/broadcast-and-digital), [Sinclair](http://sbgi.net/tv-channels/), [Nexstar](https://www.nexstar.tv/stations/), [Tribune](http://www.tribunemedia.com/our-brands/) and [Hearst](http://www.hearst.com/broadcasting/our-markets). Boutique \n",
+    "The sources of this dataset are [usnpl.com](www.usnpl.com)-- newspapers and magazines by state, [stationindex.com](www.stationindex.com) -- TV stations by state and by owner, and homepages of the media corporations [Meredith](http://www.meredith.com/local-media/broadcast-and-digital), [Sinclair](http://sbgi.net/tv-channels/), [Nexstar](https://www.nexstar.tv/stations/), [Tribune](http://www.tribunemedia.com/our-brands/) and [Hearst](http://www.hearst.com/broadcasting/our-markets).\n",
     "\n",
     "This dataset was inspired by ProPublica's [Congress API](https://projects.propublica.org/api-docs/congress-api/). I hope that this dataset will serve a similar purpose as a starting point for research and applications, as well as a bridge between datasets from social media, news articles and online communities.\n",
     "\n",
@@ -2704,10 +2704,10 @@
     "You can’t change the data except to update or correct it.\n",
     "You can’t charge people money to look at the data, or sell advertising specifically against it.\n",
     "You can’t sub-license or resell the data to others.\n",
-    "If you use the data for publication, you must cite Leon Yin and the SMaPP Lab at NYU. \n",
+    "If you use the data for publication, you must cite Leon Yin and the SMaPP Lab. \n",
     "We do not guarantee the accuracy or completeness of the data. You acknowledge that the data may contain errors and omissions. \n",
     "We are not obligated to update the data, but in the event we do, you are solely responsible for checking our site for any updates.\n",
-    "You will indemnify, hold harmless, and defend ProPublica from and against any claims arising out of your use of the data.\n",
+    "You will indemnify, hold harmless, and defend Leon Yin and the SMaPP Lab from and against any claims arising out of your use of the data.\n",
     "```\n",
     "\n",
     "### Data Collection Process\n",
